# dynabridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
benchmarks/: node_call_benchmark.js  node_call_benchmark_addon.cpp  python_call_benchmark.cpp
dynabridge/: backend_base.h  bridge.h  callable.h  config.h  empty_export.def  empty_import.def  export.h  export_callable.h  export_core.h  export_generate.h  import.h  import_callable.h  import_core.h  import_generate.h  inplace.h  optional.h  traits.h  type_list.h
dynabridge/backends/: napi.h  napi_converters.h  python.h  python_api.h  python_converters.h
tests/: custom_def_config_test.cpp  custom_export.def  custom_import.def  custom_second_export.def  custom_second_import.def  export.def  fake_backend.h  fake_backend_callable_group.cpp  import.def  napi_backend_real_header_test.cpp  napi_backend_test.cpp  napi_runtime_addon.cpp  napi_runtime_smoke.js  optional_test.cpp  python_backend_test.cpp  python_runtime_addon.cpp  python_runtime_smoke.py
tests/napi_stub/: node_api.h
